2005-08-19  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added section headers. The functions are still
	somewhat unordered. Renamed some functions to fit into the
	view_*_cmd naming convention.

2005-08-18  Andrzej Zaborowski  <balrogg@gmail.com>

	* screen.c (string_file_name): Increased the buffer size to
	MC_MAXPATHLEN + 1 bytes to avoid filename truncation.

2005-08-18  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_up): Don't scroll up if it is not necessary.
	This fixes an inconsistency noted by Andrej Zebrowski on
	mc-devel.
	* view.c (view_move_down): Do nothing if we're already at the
	end of the file. This makes the cursor movement more consistent
	with the behavior of the <End> key.
	* view.c (regexp_search_cmd): Moved the code to save the changes
	of the hex editor out of this function, as it has nothing to do
	with regexp searching.
	* view.c (view_display_hex): Completely rewritten. Now the code
	distinguishes several phases (state selection, color selection,
	printing) and does not mix them wildly, as the previous code
	did.
	* view.c (view_display_text): Removed the (almost) unused
	variable boldflag.
	* view.c (struct WView): Renamed found_len to search_length.

2005-08-16  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_percent): Fixed coordinate computation.
	* view.c (view_place_cursor): Made the call to widget_move()
	look like the other calls.
	* view.c (view_init_growbuf): Mark the first page full instead
	of empty. This saves one condition in view_growbuf_read_until().

2005-08-15  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_growbuf_read_until): When using mc_read, recover
	from interrupted system calls.
	* view.c (toggle_hex_mode): Now the hex cursor is always visible
	after switching to hex mode.
	* view.c (view_ccache_lookup): Rewrote the calculation of the
	cache entry. Also don't put entries in the cache when the
	current byte is '\r'.
	* view.c (view_ccache_dump): Extended the output by the offset